--- a/Facilities.html
+++ b/Facilities.html
@@ -327,74 +327,80 @@
 
 <body>
     <div class="preloader">
-        <img src="./images/logo.JPG" alt="Preloader Image">
+        <img src="./images/logo.JPG" alt="bsquare-loader-logo">
     </div>
-    <nav class="navbar navbar-expand-lg navbar-fixed-top py-0" aria-label="Offcanvas navbar large">
-        <div class="container-fluid" id="nav_container">
-            <div class="container main_nav_container justify-content-center">
-                <div class="d-flex flex-row justify-content-between inner_div">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="./images/BSquare logo without bg.png" alt="Bsquare"></a>
-                    <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
-                        <span class="bi bi-list "></span>
-                    </button>
-                </div>
-                <div class="offcanvas offcanvas-end text-bg-light m-auto" tabindex="-1" id="offcanvasNavbar2"
-                    aria-labelledby="offcanvasNavbar2Label">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbar2Label"><img src="./images/logo2.png" alt="">
-                        </h5>
-                        <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas"
-                            aria-label="Close"></button>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-fixed-top py-0" aria-label="Offcanvas navbar large">
+            <div class="container-fluid" id="nav_container">
+                <div class="container main_nav_container justify-content-center">
+                    <div class="d-flex flex-row justify-content-between inner_div">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="./images/BSquare logo without bg.png" alt="bsquare-logo"></a>
+                        <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
+                            <span class="bi bi-list "></span>
+                        </button>
                     </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <div class="offcanvas offcanvas-end text-bg-light m-auto" tabindex="-1" id="offcanvasNavbar2"
+                        aria-labelledby="offcanvasNavbar2Label">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasNavbar2Label"><img src="./images/logo2.png"
+                                    alt="bsquare-logo">
+                            </h5>
+                            <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown2" role="button"
-                                    aria-haspopup="true" aria-expanded="false" type="button" data-bs-toggle="dropdown">
-                                    Locations
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                    <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate Road</a>
-                                    <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown2" role="button"
+                                        aria-haspopup="true" aria-expanded="false" type="button"
+                                        data-bs-toggle="dropdown">
+                                        Locations
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                                        <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate
+                                            Road</a>
+                                        <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
 
-                                    <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
-                                    <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
-                                    <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./facilities.html">Amenities</a>
-                            </li>
+                                        <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
+                                        <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
+                                        <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./facilities.html">Amenities</a>
+                                </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="./gallery.html">Gallery</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./aboutus.html">About&nbsp;Us</a>
-                            </li>
-                            <li class="nav-item" style="display: flex; align-items: center;">
-                                <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
-                            </li>
-                        </ul>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./gallery.html">Gallery</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./aboutus.html">About&nbsp;Us</a>
+                                </li>
+                                <li class="nav-item" style="display: flex; align-items: center;">
+                                    <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
+                                </li>
+                            </ul>
 
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
 
     <div id="header">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/backposters/aminitiesPoster.png" class="d-block w-100" alt="...">
+                    <img src="./images/backposters/aminitiesPoster.png" class="d-block w-100"
+                        alt="amenities-img-bsquare">
                     <div class="title">
                         <h1 class="animated slideInDown"><span>A workspace that has all the facilities and amenities
                                 necessary for your business</span></h1>
@@ -420,7 +426,7 @@
             <br><br>
             <div class="container  workspace my-auto">
                 <div class="card" style="height: 550px;">
-                    <img src="./images/administrative-1.jpg" alt="">
+                    <img src="./images/administrative-1.jpg" alt="bsquare-amenities-img">
                     <h3 class="title">Adminstrative management Services</h3>
                     <div class="bar">
                         <div class="emptybar"></div>
@@ -438,7 +444,7 @@
 
                 </div>
                 <div class="card" style="height: 550px;">
-                    <img src="./images/office-1.jpg" alt="">
+                    <img src="./images/office-1.jpg" alt="bsquare-amenities-img">
                     <h3 class="title unic">Office Support</h3>
                     <div class="bar">
                         <div class="emptybar"></div>
@@ -460,7 +466,7 @@
 
                 </div>
                 <div class="card" style="height: 550px;">
-                    <img src="./images/reception.jpg" alt="">
+                    <img src="./images/reception.jpg" alt="bsquare-amenities-img">
                     <h3 class="title unic">Reception & Concierge</h3>
                     <div class="bar">
                         <div class="emptybar"></div>
@@ -478,7 +484,7 @@
 
                 </div>
                 <div class="card" style="height: 550px;">
-                    <img src="./images/facility.jpeg" alt="">
+                    <img src="./images/facility.jpeg" alt="bsquare-amenities-img">
                     <h3 class="title unic">Facilities Serve Hub</h3>
                     <div class="bar">
                         <div class="emptybar"></div>
@@ -495,7 +501,7 @@
 
                 </div>
                 <div class="card" style="height: 550px;">
-                    <img src="./images/virtual.JPG" alt="">
+                    <img src="./images/virtual.JPG" alt="bsquare-amenities-img">
                     <h3 class="title unic">Business Meetings</h3>
                     <div class="bar">
                         <div class="emptybar"></div>
@@ -516,7 +522,7 @@
             </div>
             <div class="container  workspace my-auto">
                 <div class="card">
-                    <img src="./images/refreshment1.jpg" alt="">
+                    <img src="./images/refreshment1.jpg" alt="bsquare-amenities-img">
                     <h3 class="title unic">Refreshments</h3>
                     <div class="bar">
                         <div class="emptybar"></div>
@@ -533,7 +539,7 @@
 
                 </div>
                 <div class="card">
-                    <img src="./images/meditation.jpg" alt="">
+                    <img src="./images/meditation.jpg" alt="bsquare-amenities-img">
                     <h3 class="title unic">Relaxation Zone</h3>
                     <div class="bar">
                         <div class="emptybar"></div>
@@ -549,7 +555,7 @@
 
                 </div>
                 <div class="card">
-                    <img src="./images/wifi.jpg" alt="">
+                    <img src="./images/wifi.jpg" alt="bsquare-amenities-img">
                     <h3 class="title unic">Free Wifi</h3>
                     <div class="bar">
                         <div class="emptybar"></div>
@@ -566,7 +572,7 @@
 
                 </div>
                 <div class="card">
-                    <img src="./images/Housekeeping.jpg" alt="">
+                    <img src="./images/Housekeeping.jpg" alt="bsquare-amenities-img">
                     <h3 class="title unic">House keeping</h3>
                     <div class="bar">
                         <div class="emptybar"></div>
@@ -617,13 +623,16 @@
                                 data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-bs-interval="10000">
-                                        <img src="./images/facilities/1.webp" class="d-block w-100" alt="...">
+                                        <img src="./images/facilities/1.webp" class="d-block w-100"
+                                            alt="bsquare-conference-rooms">
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/facilities/2.webp" class="d-block w-100" alt="...">
+                                        <img src="./images/facilities/2.webp" class="d-block w-100"
+                                            alt="bsquare-conference-rooms">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="./images/facilities/3.webp" class="d-block w-100" alt="...">
+                                        <img src="./images/facilities/3.webp" class="d-block w-100"
+                                            alt="bsquare-conference-rooms">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
@@ -661,7 +670,7 @@
                     <div class="col-xl-3 col-lg-3 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="./images/logo.JPG" class="img-fluid" alt="logo"></a>
+                                <a href="index.html"><img src="./images/logo.JPG" class="img-fluid" alt="bsquare-logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>BSQUARE is a coworking space in Ahmedabad that provides world class workspaces,
@@ -685,26 +694,40 @@
                                 data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-bs-interval="10000">
-                                        <img src="./images/teamwork.jpg" class="d-block w-100" alt="...">
+                                        <img src="./images/teamwork.jpg" class="d-block w-100" alt="bsquare-blog-img">
                                         <br>
-                                        <a href="bsquareblog.html?content=link4">Read More</a>
+                                        <h6 style="color: white; font-size: 14px;">5 Reasons Why Flexible Office Spaces and Co-Working Spaces are The Next Big Thing...</h6>
+                                        <br>
+                                        <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
+                                            target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/01.jpg" class="d-block w-100" alt="...">
+                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?content=link1">Read More</a>
+                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog"
+                                            target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./location1/9-9.jpg" class="d-block w-100" alt="...">
+                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
+                                            alt="bsquare-blog-img"><br>
+                                        <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
+                                            Workspaces...</h6>
+
                                         <br>
-                                        <a href="bsquareblog.html?content=link2">Read More</a>
+                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog"
+                                            target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="../images/office day.jpg" class="d-block w-100" alt="...">
+                                        <img src="../images/office day.jpg" class="d-block w-100"
+                                            alt="bsquare-blog-img"><br>
+                                        <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
+                                            Gamble Driving Big Revenue Boosts...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?content=link3">Read More</a>
+                                        <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog"
+                                            target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
                                 </div>
@@ -720,15 +743,15 @@
                                 </button>
                                 <br>
                             </div>
-                            
+
 
                         </div>
+
 
                         <div class="footer-widget-heading">
 
-                            <img src="./images/map2.png" width="100%" alt="">
+                            <img src="./images/map2.png" width="100%" alt="bsquare-location-map">
                         </div>
-
 
 
                     </div>
