--- a/IIMAroad.html
+++ b/IIMAroad.html
@@ -205,65 +205,69 @@
 </style>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-fixed-top py-0" aria-label="Offcanvas navbar large">
-        <div class="container-fluid" id="nav_container">
-            <div class="container main_nav_container justify-content-center">
-                <div class="d-flex flex-row justify-content-between inner_div">
-                    <a class="navbar-brand" href="./index.html">
-                        <img src="./images/BSquare logo without bg.png" alt="Bsquare"></a>
-                    <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
-                        <span class="bi bi-list "></span>
-                    </button>
-                </div>
-                <div class="offcanvas offcanvas-end text-bg-light m-auto" tabindex="-1" id="offcanvasNavbar2"
-                    aria-labelledby="offcanvasNavbar2Label">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbar2Label"><img src="./images/logo2.png" alt="">
-                        </h5>
-                        <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas"
-                            aria-label="Close"></button>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-fixed-top py-0" aria-label="Offcanvas navbar large">
+            <div class="container-fluid" id="nav_container">
+                <div class="container main_nav_container justify-content-center">
+                    <div class="d-flex flex-row justify-content-between inner_div">
+                        <a class="navbar-brand" href="./index.html">
+                            <img src="./images/BSquare logo without bg.png" alt="Bsquare"></a>
+                        <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
+                            <span class="bi bi-list "></span>
+                        </button>
                     </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <div class="offcanvas offcanvas-end text-bg-light m-auto" tabindex="-1" id="offcanvasNavbar2"
+                        aria-labelledby="offcanvasNavbar2Label">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasNavbar2Label"><img src="./images/logo2.png" alt="">
+                            </h5>
+                            <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown2" role="button"
-                                    aria-haspopup="true" aria-expanded="false" type="button" data-bs-toggle="dropdown">
-                                    Locations
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                    <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate Road</a>
-                                    <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
-                                    <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
-                                    <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
-                                    <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./facilities.html">Amenities</a>
-                            </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown2" role="button"
+                                        aria-haspopup="true" aria-expanded="false" type="button"
+                                        data-bs-toggle="dropdown">
+                                        Locations
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                                        <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate
+                                            Road</a>
+                                        <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
+                                        <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
+                                        <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
+                                        <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./facilities.html">Amenities</a>
+                                </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="./gallery.html">Gallery</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./aboutus.html">About&nbsp;Us</a>
-                            </li>
-                            <li class="nav-item" style="display: flex; align-items: center;">
-                                <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
-                            </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./gallery.html">Gallery</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./aboutus.html">About&nbsp;Us</a>
+                                </li>
+                                <li class="nav-item" style="display: flex; align-items: center;">
+                                    <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
+                                </li>
 
-                        </ul>
+                            </ul>
 
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <div id="header">
         <div id="carouselExampleControls" class="carousel slide pc" data-ride="carousel">
@@ -281,7 +285,8 @@
         <div id="carouselExampleControls" class="carousel slide d-md-block d-lg-none" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/backposters/mobiles banner/4.png" class="d-block w-100" alt="bsquarecoworkingspace">
+                    <img src="./images/backposters/mobiles banner/4.png" class="d-block w-100"
+                        alt="bsquarecoworkingspace">
                     <div class="title">
                         <h1 class="animated slideInDown"><span>IIM-A Road</span></h1>
                         <h2 class="animated slideInLeft mt-3 p-2" style="font-size: 17px;"><span>Choosing the Right
@@ -410,26 +415,40 @@
                                 data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-bs-interval="10000">
-                                        <img src="./images/teamwork.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
+                                        <img src="./images/teamwork.jpg" class="d-block w-100" alt="bsquare-blog-img">
                                         <br>
-                                        <a href="bsquareblog.html?content=link4">Read More</a>
+                                        <h6 style="color: white; font-size: 14px;">5 Reasons Why Flexible Office Spaces and Co-Working Spaces are The Next Big Thing...</h6>
+                                        <br>
+                                        <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
+                                            target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
+                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?content=link1">Read More</a>
+                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog"
+                                            target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./location1/9-9.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
+                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
+                                            alt="bsquare-blog-img"><br>
+                                        <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
+                                            Workspaces...</h6>
+
                                         <br>
-                                        <a href="bsquareblog.html?content=link2">Read More</a>
+                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog"
+                                            target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/office day.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
+                                        <img src="../images/office day.jpg" class="d-block w-100"
+                                            alt="bsquare-blog-img"><br>
+                                        <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
+                                            Gamble Driving Big Revenue Boosts...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?content=link3">Read More</a>
+                                        <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog"
+                                            target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
                                 </div>
@@ -445,15 +464,15 @@
                                 </button>
                                 <br>
                             </div>
-                            
+
 
                         </div>
+
 
                         <div class="footer-widget-heading">
 
-                            <img src="./images/map2.png" width="100%" alt="">
+                            <img src="./images/map2.png" width="100%" alt="bsquare-location-map">
                         </div>
-
 
 
                     </div>
