--- a/bsquareblog.html
+++ b/bsquareblog.html
@@ -161,10 +161,10 @@
         }
 
         function updateContent() {
-            const contentParam = getQueryParam('content');
-            const contentDiv = document.getElementById('content');
+            const contentParam = getQueryParam('bsquare');
+            const contentDiv = document.getElementById('bsquare');
             
-            if (contentParam === 'link1') {
+            if (contentParam === 'bsquare-coworking-space-blog') {
                 contentDiv.innerHTML = ` <div class="container mt-5 mb-5">
             <div class="row">
                 <div class="col-lg-8"><span class="bi bi-calendar-check-fill"> November 21, 2018</span>
@@ -304,12 +304,12 @@
                                     big
                                     and small
                                     cities....</p>
-                                <a href="bsquareblog.html?content=link4" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
                             style="width: 100%; border: none; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
-                            <img src="./location1/9-9.jpg" width="100%" alt="">
+                            <img src="./westgate-img/bsquare-westgate-img9.jpg" width="100%" alt="">
                             <div class="card-body">
                                 <span class="bi bi-calendar-check-fill"> April 12, 2019</span>
                                 <br>
@@ -317,7 +317,7 @@
                                     Workspaces</h5>
                                 <p class="card-text">The world of real estate is undergoing a significant transformation, and
                                     at the heart of this change is the booming trend of co-working spaces...</p>
-                                <a href="bsquareblog.html?content=link2" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -329,7 +329,7 @@
                                 <h5 class="card-title">Flexi Office Solutions: The Strategic Gamble Driving Big Revenue Boosts</h5>
                                 <p class="card-text">In the ever-evolving landscape of work environments, Flexi Office
                                     Companies are making a strategic bet...</p>
-                                <a href="bsquareblog.html?content=link3" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
 
@@ -339,7 +339,7 @@
         </div>  `
 
             }
-           else if (contentParam === 'link2') {
+           else if (contentParam === 'bsquare-coworking-revolution-blog') {
                 contentDiv.innerHTML =`<div class="container mt-5 mb-5">
             <div class="row">
                 <div class="col-lg-8"><span class="bi bi-calendar-check-fill"> October 26, 2018</span><br>
@@ -419,7 +419,7 @@
                                 <p class="card-text">Flexible office spaces and co-working spaces are a rage in all the big
                                     and small
                                     cities...</p>
-                                <a href="bsquareblog.html?content=link4" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -431,7 +431,7 @@
                                 <h5 class="card-title">All You Need to Know About BSQUARE Coworking Space</h5>
                                 <p class="card-text">Choosing the right kind of office space is key to making sure you have a
                                                 successful...</p>
-                                <a href="bsquareblog.html?content=link1" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -443,7 +443,7 @@
                                 <h5 class="card-title">Flexi Office Solutions: The Strategic Gamble Driving Big Revenue Boosts</h5>
                                 <p class="card-text">In the ever-evolving landscape of work environments, Flexi Office
                                     Companies are making a strategic bet...</p>
-                                <a href="bsquareblog.html?content=link3" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
 
@@ -451,7 +451,7 @@
                 </div>
             </div>
         </div>`}
-        else if (contentParam === 'link3') {
+        else if (contentParam === 'bsquare-flexi-office-solutions-blog') {
                 contentDiv.innerHTML =`<div class="container mt-5 mb-5">
             <div class="row">
                 <div class="col-lg-8"> <span class="bi bi-calendar-check-fill">November 30, 2023</span><br>
@@ -556,12 +556,12 @@
                                 <p class="card-text">Flexible office spaces and co-working spaces are a rage in all the big
                                     and small
                                     cities...</p>
-                                <a href="bsquareblog.html?content=link4" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
                             style="width: 100%; border: none; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
-                            <img src="./location1/9-9.jpg" width="100%" alt="">
+                            <img src="./westgate-img/bsquare-westgate-img9.jpg" width="100%" alt="">
                             <div class="card-body">
                                 <span class="bi bi-calendar-check-fill"> April 12, 2019</span>
                                 <br>
@@ -569,7 +569,7 @@
                                     Workspaces</h5>
                                 <p class="card-text">The world of real estate is undergoing a significant transformation, and
                                     at the heart of this change is the booming trend of co-working spaces...</p>
-                                <a href="bsquareblog.html?content=link2" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -582,7 +582,7 @@
                                 <p class="card-text">Choosing the right kind of office space is key to making sure you have a
                                     successful
                                     career and get to focus on your productivity and nothing else...</p>
-                                <a href="bsquareblog.html?content=link1" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
 
@@ -590,7 +590,7 @@
                 </div>
             </div>
         </div>`}
-        else if (contentParam === 'link4') {
+        else if (contentParam === 'bsquare-reasons-why-flexible-office-spaces') {
                 contentDiv.innerHTML =`<div class="container mt-5 mb-5">
             <div class="row">
                 <div class="col-lg-8"> <span class="bi bi-calendar-check-fill"> November 30, 2023</span><br>
@@ -710,12 +710,12 @@
                                 <br>
                                 <h5 class="card-title">All You Need to Know About BSQUARE Coworking Space</h5>
                                 <p class="card-text">Choosing the right kind of office space is key to making sure you have a successful career and get to focus on your productivity and nothing else. But this can ...</p>
-                                <a href="bsquareblog.html?content=link1" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
                             style="width: 100%; border: none; box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
-                            <img src="./location1/9-9.jpg" width="100%" alt="">
+                            <img src="./westgate-img/bsquare-westgate-img9.jpg" width="100%" alt="">
                             <div class="card-body">
                                 <span class="bi bi-calendar-check-fill"> April 12, 2019</span>
                                 <br>
@@ -723,7 +723,7 @@
                                     Workspaces</h5>
                                 <p class="card-text">The world of real estate is undergoing a significant transformation, and
                                     at the heart of this change is the booming trend of co-working spaces...</p>
-                                <a href="bsquareblog.html?content=link2" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -735,7 +735,7 @@
                                 <h5 class="card-title">  Flexi Office Solutions: The Strategic Gamble Driving Big Revenue Boosts</h5>
                                 <p class="card-text">>In the ever-evolving landscape of work environments, Flexi Office
                                                 Companies are making a strategic bet that's not just about providing...</p>
-                                <a href="bsquareblog.html?content=link3" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
 
@@ -832,7 +832,7 @@
 
     <section id="main-container" class="main-container">
         <!-- <div class="container"> -->
-        <div class="w-100" id="content">
+        <div class="w-100" id="bsquare">
 
 
 
@@ -872,52 +872,67 @@
                         <div class="footer-widget-heading carousal_button">
                             <h3>Blogs</h3>
                             <div id="carouselExampleIntervalone" class="carousel slide first_btn"
-                            data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active" data-bs-interval="10000">
-                                    <img src="./images/teamwork.jpg" class="d-block w-100" alt="...">
-                                    <br>
-                                    <a href="bsquareblog.html?content=link4" target="_bquare">Read More</a>
+                                data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active" data-bs-interval="10000">
+                                        <img src="./images/teamwork.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <br>
+                                        <h6 style="color: white; font-size: 14px;">5 Reasons Why Flexible Office Spaces and Co-Working Spaces are The Next Big Thing...</h6>
+                                        <br>
+                                        <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
+                                            target="_bquare">Read More</a>
+                                    </div>
+                                    <div class="carousel-item" data-bs-interval="2000">
+                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
+                                        <br>
+                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog"
+                                            target="_bquare">Read More</a>
+                                        <br> <br>
+                                    </div>
+                                    <div class="carousel-item" data-bs-interval="2000">
+                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
+                                            alt="bsquare-blog-img"><br>
+                                        <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
+                                            Workspaces...</h6>
+
+                                        <br>
+                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog"
+                                            target="_bquare">Read More</a>
+                                        <br> <br>
+                                    </div>
+                                    <div class="carousel-item" data-bs-interval="2000">
+                                        <img src="../images/office day.jpg" class="d-block w-100"
+                                            alt="bsquare-blog-img"><br>
+                                        <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
+                                            Gamble Driving Big Revenue Boosts...</h6>
+                                        <br>
+                                        <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog"
+                                            target="_bquare">Read More</a>
+                                        <br> <br>
+                                    </div>
                                 </div>
-                                <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="./images/01.jpg" class="d-block w-100" alt="...">
-                                    <br>
-                                    <a href="bsquareblog.html?content=link1" target="_bquare">Read More</a>
-                                    <br> <br>
-                                </div>
-                                <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="./location1/9-9.jpg" class="d-block w-100" alt="...">
-                                    <br>
-                                    <a href="bsquareblog.html?content=link2" target="_bquare">Read More</a>
-                                    <br> <br>
-                                </div>
-                                <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="../images/office day.jpg" class="d-block w-100" alt="...">
-                                    <br>
-                                    <a href="bsquareblog.html?content=link3" target="_bquare">Read More</a>
-                                    <br> <br>
-                                </div>
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleIntervalone" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleIntervalone" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                                <br>
                             </div>
-                            <button class="carousel-control-prev" type="button"
-                                data-bs-target="#carouselExampleIntervalone" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button"
-                                data-bs-target="#carouselExampleIntervalone" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
-                            <br>
-                        </div>
 
 
                         </div>
+
 
                         <div class="footer-widget-heading">
-                            <img src="./images/map2.png" width="100%" alt="">
-                        </div>
 
+                            <img src="./images/map2.png" width="100%" alt="bsquare-location-map">
+                        </div>
 
 
                     </div>
