--- a/prahladnagar.html
+++ b/prahladnagar.html
@@ -147,71 +147,75 @@
 </style>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-fixed-top py-0" aria-label="Offcanvas navbar large">
-        <div class="container-fluid" id="nav_container">
-            <div class="container main_nav_container justify-content-center">
-                <div class="d-flex flex-row justify-content-between inner_div">
-                    <a class="navbar-brand" href="./index.html">
-                        <img src="./images/BSquare logo without bg.png" alt="Bsquare"></a>
-                    <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
-                        <span class="bi bi-list "></span>
-                    </button>
-                </div>
-                <div class="offcanvas offcanvas-end text-bg-light m-auto" tabindex="-1" id="offcanvasNavbar2"
-                    aria-labelledby="offcanvasNavbar2Label">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbar2Label"><img src="./images/logo2.png" alt="">
-                        </h5>
-                        <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas"
-                            aria-label="Close"></button>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-fixed-top py-0" aria-label="Offcanvas navbar large">
+            <div class="container-fluid" id="nav_container">
+                <div class="container main_nav_container justify-content-center">
+                    <div class="d-flex flex-row justify-content-between inner_div">
+                        <a class="navbar-brand" href="./index.html">
+                            <img src="./images/BSquare logo without bg.png" alt="bsquare-logo"></a>
+                        <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
+                            <span class="bi bi-list "></span>
+                        </button>
                     </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <div class="offcanvas offcanvas-end text-bg-light m-auto" tabindex="-1" id="offcanvasNavbar2"
+                        aria-labelledby="offcanvasNavbar2Label">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasNavbar2Label"><img src="./images/logo2.png" alt="bsquare-logo">
+                            </h5>
+                            <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown2" role="button"
-                                    aria-haspopup="true" aria-expanded="false" type="button" data-bs-toggle="dropdown">
-                                    Locations
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                    <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate Road</a>
-                                    <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
-                                    <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
-                                    <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
-                                    <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./facilities.html">Amenities</a>
-                            </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown2" role="button"
+                                        aria-haspopup="true" aria-expanded="false" type="button"
+                                        data-bs-toggle="dropdown">
+                                        Locations
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                                        <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate
+                                            Road</a>
+                                        <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
+                                        <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
+                                        <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
+                                        <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./facilities.html">Amenities</a>
+                                </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="./gallery.html">Gallery</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./aboutus.html">About&nbsp;Us</a>
-                            </li>
-                            <li class="nav-item" style="display: flex; align-items: center;">
-                                <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
-                            </li>
-                        </ul>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./gallery.html">Gallery</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./aboutus.html">About&nbsp;Us</a>
+                                </li>
+                                <li class="nav-item" style="display: flex; align-items: center;">
+                                    <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
+                                </li>
+                            </ul>
 
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <div id="header">
 
         <div id="carouselExampleControls" class="carousel slide  d-lg-block" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/backposters/26.png" class="d-block w-100" alt="bsquarecoworkingspace">
+                    <img src="./images/backposters/26.png" class="d-block w-100" alt="prahladnagar-img-bsquare">
 
 
                     <div class="title">
@@ -293,21 +297,21 @@
         <div class="container">
             <div id="gallery" class="container-fluid">
                 <div class="popup">
-                    <img src="./location1/1-1.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/2-2.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/3-3.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/4-4.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/5-5.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/6-6.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/7-7.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/8-8.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/9-9.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/10-10.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/11-11.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/12-12.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/13-13.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/14-14.jpg" class="img-responsive" alt="Westgate_img">
-                    <img src="./location1/15-15.jpg" class="img-responsive" alt="Westgate_img">
+                    <img src="./westgate-img/bsquare-westgate-img1.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img2.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img3.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img4.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img5.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img6.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img7.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img8.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img9.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img10.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img11.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img12.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img13.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img14.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img15.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
                 </div>
                 <div class="showover">
                     <div class="overlay"></div>
@@ -332,7 +336,7 @@
                     <div class="col-xl-3 col-lg-3 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="./images/logo.JPG" class="img-fluid" alt="logo"></a>
+                                <a href="index.html"><img src="./images/logo.JPG" class="img-fluid" alt="bsquare-logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>BSQUARE is a coworking space in Ahmedabad that provides world class workspaces,
@@ -354,26 +358,40 @@
                                 data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-bs-interval="10000">
-                                        <img src="./images/teamwork.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
+                                        <img src="./images/teamwork.jpg" class="d-block w-100" alt="bsquare-blog-img">
                                         <br>
-                                        <a href="bsquareblog.html?content=link4" target="_bquare">Read More</a>
+                                        <h6 style="color: white; font-size: 14px;">5 Reasons Why Flexible Office Spaces and Co-Working Spaces are The Next Big Thing...</h6>
+                                        <br>
+                                        <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
+                                            target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
+                                        <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
+                                        <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?content=link1" target="_bquare">Read More</a>
+                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog"
+                                            target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./location1/9-9.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
+                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
+                                            alt="bsquare-blog-img"><br>
+                                        <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
+                                            Workspaces...</h6>
+
                                         <br>
-                                        <a href="bsquareblog.html?content=link2" target="_bquare">Read More</a>
+                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog"
+                                            target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./images/office day.jpg" class="d-block w-100" alt="bsquarecoworkingspace">
+                                        <img src="../images/office day.jpg" class="d-block w-100"
+                                            alt="bsquare-blog-img"><br>
+                                        <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
+                                            Gamble Driving Big Revenue Boosts...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?content=link3" target="_bquare">Read More</a>
+                                        <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog"
+                                            target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
                                 </div>
@@ -389,7 +407,6 @@
                                 </button>
                                 <br>
                             </div>
-                            
 
 
                         </div>
@@ -397,7 +414,7 @@
 
                         <div class="footer-widget-heading">
 
-                            <img src="./images/map2.png" width="100%" alt="">
+                            <img src="./images/map2.png" width="100%" alt="bsquare-location-map">
                         </div>
 
 
